--- a/src/pages/ProductDetail/ProductDetail.module.scss
+++ b/src/pages/ProductDetail/ProductDetail.module.scss
@@ -80,3 +80,10 @@
   width: 430px;
   height: 522px;
 }
+.dcrt {
+  margin-top: 40px;
+}
+.content-dcrt {
+  font-weight: 200;
+  margin-top: 12px;
+}
