--- a/src/pages/ProductDetail/ProductDetail.module.scss
+++ b/src/pages/ProductDetail/ProductDetail.module.scss
@@ -87,3 +87,24 @@
   font-weight: 200;
   margin-top: 12px;
 }
+.button {
+  border: none;
+  padding: 10px 15px;
+  // background-color: #ccc;
+  margin-left: 10px;
+  color: #000;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+.button:hover {
+  background-color: #ddd;
+}
+
+.button.active {
+  border: 1px solid #000;
+  outline: none;
+}
+.selected-color {
+  margin-bottom: 20px;
+}
